@@ -77,3 +77,28 @@ Prompts user to select from a list of available commands:
   (let ((command (aider-read-string "Enter command to send to aider: ")))
     ;; Use the shared helper function to send the command
     (aider--send-command command t)))
+
+(defun aider-add-same-type-files-under-dir ()
+  "Add all files with same suffix as current file under current directory to Aider.
+If there are more than 40 files, refuse to add and show warning message."
+  (interactive)
+  (if (not buffer-file-name)
+      (message "Current buffer is not visiting a file")
+    (let* ((current-suffix (file-name-extension buffer-file-name))
+           (dir (file-name-directory buffer-file-name))
+           (max-files 40)
+           (files (directory-files dir t
+                                   (concat "\\." current-suffix "$")
+                                   t))) ; t means don't include . and ..
+      (if (> (length files) max-files)
+          (message "Too many files (%d, > %d) found with suffix .%s. Aborting."
+                   (length files) max-files current-suffix)
+        (let ((formatted-files (mapcar #'aider--format-file-path
+                                       (mapcar (lambda (f) (aider--get-file-path f)) files)))
+              (command nil))
+          (when formatted-files
+            (setq command (concat "/add " (mapconcat #'identity formatted-files " ")))
+            (aider--send-command command t)
+            (message "Added %d files with suffix .%s"
+                     (length files) current-suffix))
+          )))))
